cli/tests/default/e2e/snapshots/test_rule_validation/test_validation_of_invalid_rules/rulesinvalid-rulesinvalid-paths-list.yaml/results.txt
Configuration is invalid - found 1 configuration error(s), and 0 rule(s).
[ERROR] Rule parse error in rule arg-reassign:
 each paths should be a dictionary
  --> rules/invalid-rules/invalid-paths-list.yaml:8
   6 |     paths:
   7 |       # bad syntax: these should be under an object, i.e. `exclude:`
   8 |       - "*.py"
     |       ^
   9 |       - "test/*"
  10 |     message: "$X is being assigned to one or two"
